fix script with for mobile
it was going over 100% with causing a horizontal scroll

--- a/css/style.css
+++ b/css/style.css
@@ -70,15 +70,11 @@ h3{
 #map{
   position: absolute;
     z-index: 2;
-    height: calc(100% - 150px);
+    height: calc(100% - 195px);
 
    
    top:45px;
-   padding-bottom: -300px;
-
-   
- /*   padding-bottom: -250px;
-    margin-bottom: -250px;*/
+ 
   }
   #audioText {
    z-index: 900;
@@ -220,11 +216,11 @@ h3{
   height: 100%;
   background-color: #fff;
   width: 100%;
-  padding: -10px;
+  
 }
 #textModal{
-  width: 100%;
-  height: 100%;
+ /* width: 100%;
+  height: 100%;*/
 }
 .reveal-modal.open{
   top: 0px;
